Remove Java 9 build profile #310
Lettuce build does not require a specific build profile anymore.