@@ -367,27 +367,6 @@
 
         <profile>
 
-            <id>java9</id>
-
-            <activation>
-                <jdk>9</jdk>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <argLine>--add-opens=java.base/java.nio=ALL-UNNAMED
-                                --add-opens=java.base/java.lang=ALL-UNNAMED
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-
             <id>sonatype-oss-release</id>
 
             <build>
@@ -762,6 +741,7 @@
                 </plugins>
             </build>
         </profile>
+
     </profiles>
 
     <build>
